--- a/src/App.css
+++ b/src/App.css
@@ -39,17 +39,19 @@
 
 .title {
   margin: auto;
-  width: 30%;
+  width: 25%;
   border: 3px solid lightpink;
   padding: 10px;
   margin-top: 15%;
+  background-color: rgba(255,255,255,0.3);
 }
 
 .search {
   margin: auto;
-  width: 30%;
+  width: 25%;
   border: 3px solid lightpink;
   padding: 10px;
+  background-color: rgba(255,255,255,0.3);
 }
 
 .searchbar {
@@ -57,6 +59,7 @@
   width: 60%;
   border: 3px solid lightpink;
   padding: 10px;
+  background-color: rgba(255,255,255,0.3);
 }
 
 .button {
@@ -68,10 +71,11 @@
 
 .weatherBox {
   margin: auto;
-  width: 30%;
+  width: 20%;
   border: 3px solid lightpink;
   padding: 10px;
   margin-top: 3%;
+  background-color: rgba(255,255,255,0.3);
 }
 
 .weatherBox p {
